[package]
name = "plutonium-updater"
version = "0.4.0"
edition = "2021"
build = "res/build.rs"

[profile.release]
opt-level = "s"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
http_req = { version = "0.9.0", default-features = false, features = [
    "rust-tls",
] }
nanoserde = "0.1.32"
sha1_smol = "1.0.0"
indicatif = "0.17.2"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "plutonium-updater.exe"
LegalCopyright = "© mxve 2022 | GPLv3"
FileDescription = "Plutonium Updater"
ProductName = "plutonium-updater.rs"