[package]
name = "plutonium-updater"
version = "0.4.4"
edition = "2021"
build = "res/build.rs"

[profile.release]
opt-level = "s"
panic = "abort"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
http_req = { version = "0.10.3", default-features = false, features = [
    "rust-tls",
] }
nanoserde = "0.1.37"
sha1_smol = "1.0.1"
indicatif = "0.17.8"
webpki = "0.22.4"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "plutonium-updater.exe"
LegalCopyright = "© mxve 2022 | GPLv3"
FileDescription = "Plutonium Updater"
ProductName = "plutonium-updater.rs"